// Custom Keyboard Builder - ERD con: Account, Seller Profile va Audit
// Lat cat nay dung de trinh bay role, user, seller verification va audit log.
// ERD full van la Documents/Custom_Keyboard_ERD.dbml.

Table roles {
  role_id int [pk, increment]
  role_name varchar [unique]
  permissions varchar
}

Table users {
  user_id int [pk, increment]
  role_id int [not null, ref: > roles.role_id]
  username varchar [unique]
  email varchar [unique]
  phone varchar [unique]
  password_hash varchar
  is_active boolean
}

Table seller_profiles {
  seller_profile_id int [pk, increment]
  user_id int [not null, ref: > users.user_id, unique]
  assigned_by_admin_id int [ref: > users.user_id]
  shop_name varchar
  phone varchar
  address varchar
  is_verified boolean
  verified_by_admin_id int [ref: > users.user_id]
  assigned_at datetime
  verified_at datetime

  Note: 'assigned_by_admin_id and verified_by_admin_id are optional admin user references.'
}

Table audit_log {
  log_id int [pk, increment]
  user_id int [not null, ref: > users.user_id]
  table_name varchar
  record_id varchar
  action varchar
  old_value_json text
  new_value_json text
  changed_at datetime
}
